Server: Fixed validating path
Make sure the request is not accessing a parent directory of
'presentation'.